server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: where-was-it-backend-service
spec:
  selector:
    app: python
  type: NodePort
  ports:
    - port: 80
      targetPort: 5000
